# rag_aws

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.lambda  LICENSE  Makefile  README.md  env.example  pyproject.toml
docs/: api.md  architecture.md  aws-arch-learning-material.md  debugging-aws-commands.md  requirements.md
infrastructure/: __init__.py  app.py  bootstrap_utils.py  cdk-teardown  cdk.json  stack.py
infrastructure/lambda/: handler.py  requirements.txt
src/rag_agent/: __init__.py  agent.py  api.py  cli.py  config.py  ingestion.py  models.py
src/rag_agent/services/: __init__.py  bedrock.py  dynamodb.py  embeddings.py  s3_vectors.py
src/rag_agent/tools/: __init__.py  base.py  document.py  search.py  web.py
tests/: __init__.py  conftest.py  test_ingestion.py  test_models.py  test_tools.py
